[WIP] Compact .kb